examples/bad/ERROR_INCORRECT_NUMBER_OF_ARGUMENTS/incorrect_num.st
language core;

extend with #multiparameter-functions;

fn main(n : Nat) -> Nat {
    return (fn(a : Nat, b : Nat) {
    	return 0
    })(0)
}

//ERROR_INCORRECT_NUMBER_OF_ARGUMENTS
